--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^22.5.2",
     "@types/nodemailer": "^6.4.15",
     "@types/otp-generator": "^4.0.2",
+    "@types/socket.io": "^3.0.2",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
@@ -42,6 +43,7 @@
     "mongoose": "^8.6.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "socket.io": "^4.8.1"
   }
 }
