--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chatscope/chat-ui-kit-react": "^2.0.3",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.1.10",
-    "@heroicons/react": "^1.0.6",
+    "@heroicons/react": "^2.1.5",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "datepicker": "^0.0.0",
@@ -22,14 +23,17 @@
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
-    "react-datepicker": "^7.3.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.1",
     "react-switch": "^7.0.0",
     "redux-persist": "^6.0.0",
+    "sass": "^1.79.5",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.5.0",
     "yup": "^1.4.0"
   },
