--- a/Backend/package.json
+++ b/Backend/package.json
@@ -44,6 +44,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "otp-generator": "^4.0.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "stripe": "^17.3.1"
   }
 }
