--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,11 +17,15 @@
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
     "@reduxjs/toolkit": "^2.2.7",
+    "@stripe/stripe-js": "^4.10.0",
     "axios": "^1.7.7",
     "datepicker": "^0.0.0",
+    "dayjs": "^1.11.13",
     "firebase": "^10.13.1",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.456.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
