--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,14 +19,17 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@stripe/stripe-js": "^4.10.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "datepicker": "^0.0.0",
     "dayjs": "^1.11.13",
     "firebase": "^10.13.1",
     "formik": "^2.4.6",
+    "framer-motion": "^11.11.17",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.456.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -35,6 +38,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.1",
     "react-switch": "^7.0.0",
+    "react-ui-cards": "^3.1.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.79.5",
     "socket.io-client": "^4.8.1",
