--- a/Backend/package.json
+++ b/Backend/package.json
@@ -40,6 +40,7 @@
     "express-session": "^1.18.0",
     "generate-otp": "^1.0.6",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.6.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
