--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon src/server.ts",
-    "build":"tsc"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -13,21 +13,22 @@
   "description": "",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/cookie-parser": "^1.4.7",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/express-session": "^1.18.0",
+    "@types/express-session": "^1.18.1",
+    "@types/helmet": "^4.0.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.12",
-    "@types/node": "^22.5.2",
+    "@types/node": "^22.10.1",
     "@types/nodemailer": "^6.4.15",
     "@types/otp-generator": "^4.0.2",
     "@types/socket.io": "^3.0.2",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.7.2"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.658.1",
@@ -36,10 +37,12 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "dotenv": "^16.4.6",
+    "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
     "express-session": "^1.18.0",
     "generate-otp": "^1.0.6",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.6.0",
